# celex5_stereo_multithread

./: CMakeLists.txt  README.md  package.xml
auboi5dependencies/robotSDK/inc/: AuboRobotMetaType.h  readme  serviceinterface.h
include/: catch_prediction.h  celex5_ros.h  manipulator_describe.h  matplotlibcpp.h  robot_catch.h  solve_kinematics.h  useful_movement.h  visual_servoing.h
src/: 20210706*celex5_stereo_multithread_callback.cpp  20210706celex5_stereo_multithread_callback20210706.cpp  20210713*celex5_stereo_multithread_event_circle.cpp  20210714****celex5_stereo_multithread_event_circle.cpp  20210714celex5_stereo_multithread_event_circle (copy).cpp  20210715****celex5_stereo_multithread_calibration.cpp  20210729celex5_stereo_multithread_event_circle.cpp  Jacob.txt  catch_prediction (another copy).cpp  catch_prediction (copy).cpp  catch_prediction.cpp  celex5_stereo_multithread_calibration (copy).cpp  celex5_stereo_multithread_calibration.cpp  celex5_stereo_multithread_callback (copy).cpp  celex5_stereo_multithread_callback.cpp  celex5_stereo_multithread_event_circle(o).cpp  celex5_stereo_multithread_event_circle.cpp  kalman.cpp  kalmanFilter.m  robot_catch.cpp  trajectory_test.txt  visual_servoing.cpp
